# Aupo

./: CMakeLists.txt  README.md
ExperimentConfigs/AupoEval/: AupoEval.yml
include/: Arena.h
include/Agents/Aupo/: AupoAgent.h  AupoNode.h
include/Agents/Mcts/: MctsAgent.h  MctsNode.h
include/Games/: Gamestate.h
include/Games/MDPs/: AcademicAdvising.h  GameOfLife.h  MultiArmedBandit.h  SysAdmin.h  Tamarisk.h  Wildfire.h
include/Utils/: Debug.h  Distributions.h
resources/AcademicAdvisingCourses/: 0.txt  1.txt  2.txt  3.txt
resources/GameOfLifeMaps/: 0.txt  3Uniform.txt  5.txt  6.txt  deterministic0.txt  test.txt
resources/SysAdminTopologies/: 1.txt  3.txt  4.txt  5.txt
src/: Arena.cpp  main.cpp
src/Agents/Aupo/: AupoAgent.cpp  AupoNode.cpp
src/Agents/Mcts/: MctsAgent.cpp  MctsNode.cpp
src/Games/MDPs/: AcademicAdvising.cpp  GameOfLife.cpp  MultiArmedBandit.cpp  SysAdmin.cpp  Tamarisk.cpp  Wildfire.cpp
src/Utils/: AgentMaker.cpp  Distributions.cpp
